# AST

./: .gitattributes  .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: astc.cpp
src/lang/: CMakeLists.txt
src/lang/src/: interpret.h  language.cpp  language.h  main.cpp  typecheck.h
src/lib/: CMakeLists.txt
src/lib/include/ast/: ast.h  match.h  parser.h  transform.h  visitor.h
src/lib/src/: ast.cpp  ast_print.cpp  match.cpp  parser.cpp  transform.cpp  visitor.cpp
src/lib/test/: ast.cpp  ast_print.cpp  data.cpp  match.cpp  parser.cpp  transform.cpp  visitor.cpp
src/print/: CMakeLists.txt
